modifications to theme; updates to pages; new rakefile to build/publish; rearrange some files to reflect old site structure

--- a/_posts/2011-05-09-welcome.md
+++ b/_posts/2011-05-09-welcome.md
@@ -3,6 +3,7 @@ title: Welcome!
 author: Matthew Smith
 layout: post
 permalink: /2011/05/09/welcome
+excerpt: Aaaand she's dead
 categories:
   - General
 ---
